src/components/dashboard-table/table.css
.dashboard-table.ReactTable {
	max-height: 100%;
	background: white;
	border: 1px solid  rgba(92, 92, 92, 0.6);
	border-radius: 6px;
	box-shadow: 0 0 8px rgba(92, 92, 92, 0.5);
	margin-bottom: 15px;
	font-family: Open Sans Condensed;
	font-weight: 800;
	animation: slide-in-right 0.7s;
	width: 100%;
	max-width: calc(100% - 42px);
	float: left;
}

.dashboard-table .rt-th {
	color: darkslategrey;
}

.dashboard-table .rt-thead {
	overflow-y: scroll;
	overflow-x: hidden;
}

.dashboard-table .rt-thead::-webkit-scrollbar {
	background: transparent;
}

.dashboard-table .rt-tbody {
	overflow-x: hidden !important;
}

.dashboard-table .rt-td {
	font-weight: 400;
}

/**
 * ----------------------------------------
 * animation slide-in-right
 * ----------------------------------------
 */
@-webkit-keyframes slide-in-right {
	0% {
		-webkit-transform: translateX(1000px);
		transform: translateX(1000px);
		opacity: 0;
	}

	100% {
		-webkit-transform: translateX(0);
		transform: translateX(0);
		opacity: 1;
	}
}

@keyframes slide-in-right {
	0% {
		-webkit-transform: translateX(1000px);
		transform: translateX(1000px);
		opacity: 0;
	}

	100% {
		-webkit-transform: translateX(0);
		transform: translateX(0);
		opacity: 1;
	}
}

